force-app/main/default/objects/Exercise__c/fields/Average_Heart_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Heart_Rate__c</fullName>
    <label>Average Heart Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>