force-app/main/default/objects/Exercise__c/fields/Bad_HR_Data__c.field-meta.xml
<CustomField>
    <fullName>Bad_HR_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bad HR Data?</label>
    <type>Checkbox</type>
</CustomField>