force-app/main/default/objects/Exercise__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Day</label>
    <referenceTo>Day__c</referenceTo>
    <relationshipLabel>Exercise</relationshipLabel>
    <relationshipName>Activity</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>