force-app/main/default/objects/Exercise__c/fields/Distance_Miles__c.field-meta.xml
<CustomField>
    <fullName>Distance_Miles__c</fullName>
    <label>Distance (Miles)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>