force-app/main/default/objects/Exercise__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>