force-app/main/default/objects/Exercise__c/fields/Elevation_Gain_Feet__c.field-meta.xml
<CustomField>
    <fullName>Elevation_Gain_Feet__c</fullName>
    <label>Elevation Gain (Feet)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>