force-app/main/default/objects/Exercise__c/fields/Elevation_Gain_per_Mile__c.field-meta.xml
<CustomField>
    <fullName>Elevation_Gain_per_Mile__c</fullName>
    <formula>Elevation_Gain_Feet__c / Distance_Miles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elevation Gain per Mile</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>