force-app/main/default/objects/Exercise__c/fields/Exercise_18_Character_ID__c.field-meta.xml
<CustomField>
    <fullName>Exercise_18_Character_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exercise 18 Character ID</label>
    <type>Text</type>
</CustomField>