force-app/main/default/objects/Exercise__c/fields/Perceived_Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Perceived_Level_of_Effort__c</fullName>
    <label>Perceived Level of Effort</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>