force-app/main/default/objects/Exercise__c/fields/Sweat_Rate_lt_hr__c.field-meta.xml
<CustomField>
    <fullName>Sweat_Rate_lt_hr__c</fullName>
    <label>Sweat Rate (lt / hr)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>