force-app/main/default/objects/Exercise__c/fields/tSS_Score__c.field-meta.xml
<CustomField>
    <fullName>tSS_Score__c</fullName>
    <label>tSS / Relative Effort</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>