force-app/main/default/objects/Exercise__c/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <label>Type of Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run</fullName>
            </value>
            <value>
                <fullName>Walk</fullName>
            </value>
            <value>
                <fullName>Hike</fullName>
            </value>
            <value>
                <fullName>Ski</fullName>
            </value>
            <value>
                <fullName>Climb</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Swim</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Rowing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>